WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305666
docs.google.com: Emojis don't show properly
https://bugs.webkit.org/show_bug.cgi?id=305666
Summary
docs.google.com: Emojis don't show properly
Vitor Roriz
Reported
2026-01-16 13:46:13 PST
macOS: typing ‘a’: generates a keypress event inputing an emoji, like :face_holding_back_tears: from emoji picker: does not generate a keypress event iOS: typing ‘a’: generates a keypress event inputing an emoji, like :face_holding_back_tears: from emoji picker: also generates a keypress event Google docs intercepts the keypress event and calls preventDefault(). It then calls String.fromCharCode() on the keypress charcode, which will truncate it to 16 bits.
Attachments
Add attachment
proposed patch, testcase, etc.
Vitor Roriz
Comment 1
2026-01-16 13:46:23 PST
rdar://122678873
Vitor Roriz
Comment 2
2026-01-16 13:56:14 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56738
EWS
Comment 3
2026-01-20 18:28:52 PST
Committed
305914@main
(db4847511d66): <
https://commits.webkit.org/305914@main
> Reviewed commits have been landed. Closing PR #56738 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug